<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Carnet De Bord</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_create_ticket">Localisation</string>
    <string name="titre_ticket">Titre</string>
    <string name="title_activity_consult_ticket">ConsultTicketActivity</string>
    <string name="label_carte">CARTE</string>
    <string name="label_stats">STATISTIQUES</string>
    <string name="cb_ticket_title">Titre</string>
    <string name="cb_ticket_content">Rédiger votre message</string>
    <string name="cb_ticket_place">Lieu</string>
    <string name="cb_ticket_event">Événement</string>
    <string name="cb_ticket_anecdote">Anecdote</string>
    <string name="cb_ticket_submit">Créer</string>
    <string name="cb_ticket_more_inf">Informations supplémentaires (optionnel)</string>
    <string name="cb_ticket_more_inf_example">Exemple : nom du restaurant, n° de téléphone...</string>
    <string name="label_infos_billets">INFORMATIONS SUR LES BILLETS</string>
    <string name="cb_ticket_state">Rendre le billet publique</string>
    <string name="cb_ticket_map_description">CARTE</string>
    <string name="cb_ticket_stats_description">STATISTIQUES</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_dash_board">Carnet De Bord</string>
    <string name="label_derniers_billets">Derniers billets consultés</string>
    <string name="label_create_ticket">Créer un billet</string>
    <string name="label_proposition_billets">Proposition de billets</string>
    <string name="title_activity_cartography_tickets">CartographyTicketsActivity</string>
    <string name="label_filtrer_par">Filtrer par</string>
    <string name="title_activity_my_itinary">MyItinary</string>
    <string name="drawer_open">Afficher le menu</string>
    <string name="drawer_close">Fermer le menu</string>

</resources>

