<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/cb_ticket_more_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cb_ticket_rbg"
        android:layout_below="@+id/cb_ticket_rbg"
        android:layout_marginTop="15dp"
        android:text="@string/cb_ticket_more_inf" />

    <EditText
        android:id="@+id/cb_ticket_more_information_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cb_ticket_rbg"
        android:layout_below="@+id/cb_ticket_more_information"
        android:hint="@string/cb_ticket_more_inf_example"
        android:textSize="12sp"
        android:scrollHorizontally="true"
        android:scrollbars="horizontal"
        android:ems="10" />

    <EditText
        android:id="@+id/cb_ticket_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/cb_ticket_location"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/cb_ticket_title"
        android:singleLine="true"
        android:scrollHorizontally="true"
        android:scrollbars="horizontal" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/cb_ticket_content"
        android:layout_width="fill_parent"
        android:layout_height="200dip"
        android:layout_below="@+id/cb_ticket_title"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:textSize="15sp"
        android:inputType="textMultiLine" >
    </EditText>

    <RadioGroup
        android:id="@+id/cb_ticket_rbg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cb_ticket_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/cb_ticket_rb_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/cb_ticket_place" />

        <RadioButton
            android:id="@+id/cb_ticket_rb_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_ticket_event" />

        <RadioButton
            android:id="@+id/cb_ticket_rb_anecdote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_ticket_anecdote" />
    </RadioGroup>

    <Button
        android:id="@+id/cb_ticket_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/cb_ticket_more_information"
        android:text="@string/cb_ticket_submit" />

    <CheckBox
        android:id="@+id/cb_ticket_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/cb_ticket_submit"
        android:layout_alignLeft="@+id/cb_ticket_more_information_edit"
        android:textSize="12sp"
        android:text="@string/cb_ticket_state" />

    <TextView
        android:id="@+id/cb_ticket_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
