<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ConsultTicketActivity" >

    <ScrollView
        android:id="@+id/scrollViewConsultTicket"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/cb_ticket_location"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.91"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/cb_ticket_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_weight="0.91"
                android:hint="@string/cb_ticket_title"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/cb_ticket_content"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_marginTop="30dp"
                android:text="@string/cb_ticket_content" />

            <ImageButton
                android:id="@+id/cb_ticket_butt_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="0.91"
                android:contentDescription="@string/cb_ticket_map_description"
                android:src="@drawable/common_signin_btn_icon_disabled_dark" />

            <fragment
                android:id="@+id/cb_ticket_map"
                android:name="com.testing.svma.MainActivity"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:layout_marginTop="10dp"
                class="com.google.android.gms.maps.MapFragment" />

            <ImageButton
                android:id="@+id/cb_ticket_butt_stats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/cb_ticket_stats_description"
                android:src="@drawable/common_signin_btn_icon_disabled_dark" />

            <LinearLayout
                android:id="@+id/cb_ticket_graph_stats"
                android:layout_width="fill_parent"
                android:layout_height="300dip"
                android:orientation="vertical" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>